<?xml version="1.0" encoding="UTF-8"?>

<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.peterrhodes.optionpricing</groupId>
  <artifactId>option-pricing</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <!-- https://central.sonatype.org/publish/requirements/#project-name-description-and-url -->
  <name>Option Pricing</name>
  <description>
    Financial option price calculator that also provides details on the analytical or numerical pricing method used.
  </description>
  <url>https://github.com/peterrhodesdev/option-pricing-java</url>

  <!-- https://central.sonatype.org/publish/requirements/#license-information -->
  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <!-- https://central.sonatype.org/publish/requirements/#developer-information -->
  <developers>
    <developer>
      <name>Peter Rhodes</name>
      <email>peter@peterrhodes.dev</email>
      <organization>Peter Rhodes dev</organization>
      <organizationUrl>https://peterrhodes.dev</organizationUrl>
    </developer>
  </developers>

  <!-- https://central.sonatype.org/publish/requirements/#scm-information -->
  <scm>
    <connection>scm:git:git://github.com/peterrhodesdev/option-pricing-java.git</connection>
    <developerConnection>scm:git:ssh://github.com:peterrhodesdev/option-pricing-java.git</developerConnection>
    <url>http://github.com/peterrhodesdev/option-pricing-java/tree/main</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>11</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <junit-platform.version>5.7.2</junit-platform.version>
  </properties>

  <dependencies>
    <!-- scope test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-platform.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-platform.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.20.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <defaultVersion>${project.version}</defaultVersion>
          <show>public</show>
        </configuration>
      </plugin>

      <!-- checkstyle -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.2</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>9.0</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>checkstyle-google</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <configLocation>google_checks.xml</configLocation>
              <suppressionsLocation>checkstyle-suppressions-google_checks.xml</suppressionsLocation>
              <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
            </configuration>
          </execution>
          <execution>
            <id>checkstyle-custom</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <configLocation>custom_checks.xml</configLocation>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <failsOnError>false</failsOnError>
          <violationSeverity>warning</violationSeverity>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <!--<consoleOutput>true</consoleOutput>-->
          <encoding>UTF-8</encoding>
          <excludes>**/module-info.java</excludes>
        </configuration>
      </plugin>

      <!-- spotbugs -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.2.0</version>
        <dependencies>
          <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs</artifactId>
            <version>4.4.1</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>spotbugs</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- PMD -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.15.0</version>
        <dependencies>
          <!-- java.lang.IncompatibleClassChangeError warnings -->
          <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.2</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>pmd</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
          <execution>
            <id>cpd</id>
            <phase>verify</phase>
            <goals>
              <goal>cpd-check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <!-- XRef warnings -->
          <linkXRef>false</linkXRef>
          <failOnViolation>true</failOnViolation>
          <printFailingErrors>true</printFailingErrors>
          <minimumTokens>80</minimumTokens>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
